# zkbinfo

./: .gitignore  Cargo.toml  README.md  deploy.sh  restart.sh  stop.sh
public/css/: style.css
public/js/: main.js  script.js
public/templates/: alliance.html  character.html  corporation.html  demo.html  error.html  losts.html  report.html  who.html
scripts/: queries.sql  update_backward.sh  update_by_date.sh  update_starts_from.sh  update_to_past.sh
src/: database_gw.rs  fetch_by_date.rs  main.rs  websocket_client.rs  zkbgui.rs  zkbinfo.rs
src/lib/: lib.rs
src/lib/api/: mod.rs
src/lib/database/: mod.rs
src/lib/evetech/: alliance.rs  character.rs  corporation.rs  images.rs  killmail.rs  mod.rs  names.rs  portrait.rs  search.rs
src/lib/gui/: mod.rs  providers.rs
src/lib/killmail/: mod.rs
static/templates/: index.html
templates/: character.html  error.html
