[package]
name = "zkbinfo"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib/lib.rs"

[[bin]]
name = "zkbinfo"
path = "src/zkbinfo.rs"

[[bin]]
name = "websocket_client"
path = "src/websocket_client.rs"

[[bin]]
name = "fetch_by_date"
path = "src/fetch_by_date.rs"


[dependencies]
anyhow = "1.0.57"
actix = "0.13.0"
chrono = "0.4.19"
hex = "0.4.3"
tokio = { version = "1.19.2", features = ["full", "time"] }
log = "0.4.17"
env_logger = "0.9.0"
websockets = "0.3.0"
rusqlite = "0.27.0"
serde_json = "1.0.81"
reqwest = { version = "0.11.10", features = ["json"] }
actix-rt = { version = "2.6.0", default-features = false }
actix-web = { version = "4.1.0" }
actix_derive = { version = "0.6.0", optional = true }
serde =  { version = "1.0.137", features = ["derive"] }
