[package]
name = "zkbinfo"
version = "0.2.2"
edition = "2021"

[lib]
name = "lib"
path = "src/lib/lib.rs"

[[bin]]
name = "zkbinfo"
path = "src/zkbinfo.rs"

[[bin]]
name = "websocket_client"
path = "src/websocket_client.rs"

[[bin]]
name = "fetch_by_date"
path = "src/fetch_by_date.rs"

[[bin]]
name = "zkbgui"
path = "src/zkbgui.rs"


[dependencies]
anyhow = "1.0.57"
actix = "0.13.0"
chrono = "0.4.19"
tokio = { version = "1.19.2", features = ["full", "time"] }
log = "0.4.17"
env_logger = "0.9.0"
websockets = "0.3.0"
rusqlite = "0.27.0"
r2d2 = "0.8.9"
r2d2_sqlite = "0.20.0"
serde_json = "1.0.81"
urlencoding = "2.1.0"
reqwest = { version = "0.11.10", features = ["json"] }
actix-rt = { version = "2.6.0", default-features = false }
actix-web = { version = "4.1.0" }
actix-http = "3.1.0"
actix-files = "0.6.1"
actix-cors ="0.6.1"
actix_derive = { version = "0.6.0", optional = true }
serde =  { version = "1.0.137", features = ["derive"] }
handlebars = { version = "4.3.1", features = ["dir_source"] }

